2000-10-17  Hugo Tyson  <hmt@redhat.com>
2000-10-10  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/ecos/support.c (setsoftnet,cyg_panic): Less chatter,
	particularly not when we're out of MBUFs.

2000-10-17  Hugo Tyson  <hmt@redhat.com>
2000-10-10  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* src/sys/net/if_bridge.c: Intergrated a more up to date version
	from the OpenBSD sources. This fixes a few bugs.

2000-10-17  Hugo Tyson  <hmt@redhat.com>

	* src/ecos/support.c (cyg_ktime_init): Start time at 1 Second so
	that all visible time values are valid; offset time by 1 Second
	subsequently, for ever.

	* src/sys/netinet/if_ether.c (arpresolve): Undo the change below;
	instead make "kernel time" be valid ie. more than 1 second into
	its life.  Dumb stack assumes it takes UNIX-like time to start.

2000-10-16  Hugo Tyson  <hmt@redhat.com>

	* src/sys/netinet/if_ether.c (arpresolve): Deal with the initial
	case when the route timeout is zero (as initialized).  Otherwise
	it never actually sent out the initial ARP request packet.  This
	caused connect() not to work, and thus ftp_test, for example.

	* src/lib/dhcp_support.c (dhcp_start_dhcp_mgt_thread): Also
	initialize the dhcp semaphore here.  The other place it is init'd
	[correctly] didn't fire if we use the standard support.  Fixed
	some absent return value warnings.

2000-10-10  Hugo Tyson  <hmt@redhat.com>

	* src/lib/tftp_server.c (tftpd_server): Modify the server to
	support multiple sessions - ie. starting N servers at once.
	Mainly this means closing the initial socket whilst servicing a
	request, so that another server can then bind to it; tell another
	server to retry that bind via a semaphore, that it waited on when
	the bind failed initially, rather than just returning.

	* src/lib/tftp_dummy_file.c (dummy_open): Trivial bugfix: scan the
	list of files as well as incrementing the counter.

2000-10-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/ecos/support.c (cyg_ktime_func,cyg_ktime_init,cyg_net_init): 